[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.7.11"
arrayref = "0.3.6"
borsh = "0.9"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = "1.7.11"
solana-sdk = "1.7.11"
solana-vote-program = "1.7.11"

[lib]
crate-type = ["cdylib", "lib"]
